# keyvault

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1780043082007-61680e58b2b74.mjs
.github/workflows/: deploy.yml
src/: PasswordVault.jsx  crypto.js  main.jsx  storage.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
