[package]
name = "keyvault"
version = "1.0.0"
description = "A private, encrypted password vault"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "keyvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
